ACRFD-9-2: Move all tantalis util functions to ttlsUtils.
