# api/controllers/application.js
@@ -4,6 +4,7 @@ var mongoose = require('mongoose');
 var qs = require('qs');
 var Actions = require('../helpers/actions');
 var Utils = require('../helpers/utils');
+var TTLSUtils = require('../helpers/ttlsUtils');
 var tagList = [
   'agency',
   'areaHectares',
@@ -365,11 +366,11 @@ exports.protectedPost = function(args, res, next) {
   app.createdDate = Date.now();
   app.save().then(function(savedApp) {
     return new Promise(function(resolve, reject) {
-      return Utils.loginWebADE()
+      return TTLSUtils.loginWebADE()
         .then(function(accessToken) {
           defaultLog.debug('TTLS API Logged in:', accessToken);
           // Disp lookup
-          return Utils.getApplicationByDispositionID(accessToken, savedApp.tantalisID);
+          return TTLSUtils.getApplicationByDispositionID(accessToken, savedApp.tantalisID);
         })
         .then(resolve, reject);
     })
@@ -480,6 +481,7 @@ exports.protectedPublish = function(args, res, next) {
     }
   });
 };
+
 exports.protectedUnPublish = function(args, res, next) {
   var objId = args.swagger.params.appId.value;
   defaultLog.info('UnPublish Application:', objId);
@@ -506,6 +508,31 @@ exports.protectedUnPublish = function(args, res, next) {
         );
     } else {
       defaultLog.info("Couldn't find that object!");
+      return Actions.sendResponse(res, 404, {});
+    }
+  });
+};
+
+// Refreshes an applications meta and features with the latest data from Tantalis.
+exports.protectedRefresh = function(args, res, next) {
+  var objId = args.swagger.params.appId.value;
+  defaultLog.info('Refresh Application, _id:', objId);
+
+  var Application = require('mongoose').model('Application');
+  Application.findOne({ _id: objId }, function(err, applicationObject) {
+    if (applicationObject) {
+      defaultLog.info('applicationObject:', JSON.stringify(applicationObject));
+
+      TTLSUtils.updateApplication(applicationObject).then(
+        updatedApplicationObject => {
+          return Actions.sendResponse(res, 200, updatedApplicationObject);
+        },
+        error => {
+          return Actions.sendResponse(res, null, error);
+        }
+      );
+    } else {
+      defaultLog.warn("Couldn't find that object!");
       return Actions.sendResponse(res, 404, {});
     }
   });
