# api/swagger/swagger.yaml
@@ -1167,6 +1167,55 @@ paths:
           description: "Access Denied"
           schema:
             $ref: "#/definitions/Error"
+  /application/{appId}/refresh:
+    x-swagger-router-controller: application
+    options:
+      tags:
+        - application
+      summary: "Pre-flight request"
+      operationId: protectedOptions
+      description: "Options on authenticated Application 'refresh' route"
+      parameters:
+        - name: appId
+          in: path
+          description: "ID of Application to refresh"
+          required: true
+          type: string
+      responses:
+        "200":
+          description: "Success"
+          schema:
+            $ref: "#/definitions/Application"
+        "403":
+          description: "Access Denied"
+          schema:
+            $ref: "#/definitions/Error"
+    put:
+      tags:
+        - application
+      summary: "Refresh an Application with the latest data from Tantalis"
+      operationId: protectedRefresh
+      description: "Authenticated access to refresh the application with the latest data from Tantalis"
+      security:
+        - Bearer: []
+      x-security-scopes:
+        - sysadmin
+        - write:application
+      parameters:
+        - name: appId
+          in: path
+          description: "ID of Application to refresh"
+          required: true
+          type: string
+      responses:
+        "200":
+          description: "Success"
+          schema:
+            $ref: "#/definitions/Application"
+        "403":
+          description: "Access Denied"
+          schema:
+            $ref: "#/definitions/Error"
   /public/application:
     x-swagger-router-controller: application
     options:
